fdo#37869 re-add missing elements to Elements dialog in Math

Signed-off-by: Jan Holesovsky <kendy@suse.cz>